Updated add location screen to geocode.

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -10,3 +10,9 @@
 </table>
 
 </form>
+
+
+<br />
+Or geocode lookup:
+<input id="location" type="text" />
+<input type="button" value="Add" onclick="doGeocode($('#location').val());"/>
