--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <a href="\location">Add location</a><br />
 <input type="textbox" id="location" />
-<input type="button" id="searchButton" value="Search" onclick="doSearch();"/>
-<input type="button" id="testButton" value="Test" onclick="testGet();" />
+<input type="button" id="searchButton" value="Search" onclick="doSearch($('#location').val());"/>
 <div id="map_canvas" style="width:500px; height:300px; ">map goes here</div>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
