--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,3 +5,5 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 <div id="results"></div>
+<!-- include the locateMe div to use browser geolocation -->
+<div id="locateMe" />
