--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
 
     <button id="doSearch" onclick="eventSearch();">Search</button>
   </div>
+  <div id="add-event"><a href="/location">Add your event</a></div>
 
 </div>
 
