--- a/views/location.ejs
+++ b/views/location.ejs
@@ -1,20 +1,10 @@
 <%= flash %>
 <script src="js/search.js?v=1"></script>
+<script src="js/save.js?v=1"></script>
 <br />
-
-<form method="POST" action="/location">
-<table>
-      <tr><td>Lat:</td><td><input type="text" name="lat"></td></tr>
-      <tr><td>Lng:</td><td><input type="text" name="lng"></td></tr>
-      <tr><td>Name:</td><td><input type="text"  id="name"></td></tr>
-      <tr><td></td><td><input type="submit" name="submit" value="Submit"></td></tr>
-</table>
-
-</form>
 
 
 <br />
-Or geocode lookup:
 Location: <input id="location" type="text" /><br/>
 Event: <input id="event" type="text" /><br />
 Date: <input type="text" name="date" id="date" /><br />
