Added front page slider to allow adding event.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,6 +252,15 @@ button {  width: auto; overflow: visible; }
   font-size: 12px;
 }
 
+#add-event-form {
+	text-align:center;
+	font-size: 12px;
+	display:none;
+	background:#ccddff; 
+	height:100px;
+	margin:3px;
+}
+
 /*
 #results {
   float: left;
