--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <script src="js/search.js?v=1"></script>
+<script src="js/save.js?v=1"></script>
 
 <div id="title" style="visibility: hidden">
   <div>
@@ -33,11 +34,17 @@
 
     <button id="doSearch" onclick="eventSearch();">Search</button>
   </div>
-  <div id="add-event"><a href="/location">Add your event</a></div>
+  <div id="add-event"><a href="#" onclick="$('#add-event-form').slideDown();">Add your event</a></div>
 
 </div>
 
 
+<div id="add-event-form">
+	<label for="addEvent">What</label><input id="addEvent" type="text" /><br />
+	<label for="addlocation">Where</label><input id="addLocation" type="text" /><br />
+	<label for="addDate">When</label><input type="text" name="addDate" id="addDate" /><br />
+	<input type="button" value="Add" onclick="saveEvent($('#addLocation').val(), $('#addEvent').val(), $('#addDate').val());"/>
+</div>
 
 
 <div class="results">
@@ -48,16 +55,6 @@
 
 
 
-
-
-<!--
-<label for="location">Search around this location:</label>
-<input type="textbox" id="location" />
-<input type="button" id="searchButton" value="Search" onclick="doSearch($('#location').val());"/>
-<div id="results"></div>
-<div id="map_canvas">map goes here</div>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
--->
 
 <!-- include the locateMe div to use browser geolocation -->
 <!--<div id="locateMe" />-->
