More tidyup and added serverdao

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,8 +92,9 @@
 
 
   <script src="js/plugins.js?v=1"></script>
-  <script src="js/script.js?v=1"></script>
-<script src="js/geocode.js?v=1"></script>
+  <!--<script src="js/script.js?v=1"></script>-->
+  <!--<script src="js/geocode.js?v=1"></script>-->
+  <script src="js/app/serverdao.js?v=1"></script>
 
   <!--[if lt IE 7 ]>
     <script src="js/dd_belatedpng.js?v=1"></script>
@@ -108,6 +109,7 @@
 
   <script type="text/javascript" src="/js/jquery.labelify.js"></script>
   <script type="text/javascript" src="/js/plax.js"></script>
+  
 
 
   <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet 
