--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -94,15 +94,15 @@
 
 
   <script src="js/plugins.js?v=1"></script>
-  <!--<script src="js/script.js?v=1"></script>-->
-  <!--<script src="js/geocode.js?v=1"></script>-->
+  <script src="js/script.js?v=1"></script>
   <script src="js/app/dao/serverdao.js?v=1"></script>
   <script src="js/app/dao/googledao.js?v=1"></script>
   <script src="js/app/dao/browserdao.js?v=1"></script>
   <script src="js/app/model/location.js?v=1"></script>
   <script src="js/app/service/geoservice.js?v=1"></script>
-  <script src="js/app/service/lookupservice.js?v=1"></script>
+  <script src="js/app/service/searchservice.js?v=1"></script>
   <script src="js/app/ui/errorhandler.js?v=1"></script>
+  <script src="js/app/ui/eventshandler.js?v=1"></script>
 
   <!--[if lt IE 7 ]>
     <script src="js/dd_belatedpng.js?v=1"></script>
