--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -99,8 +99,10 @@
   <script src="js/app/dao/googledao.js?v=1"></script>
   <script src="js/app/dao/browserdao.js?v=1"></script>
   <script src="js/app/model/location.js?v=1"></script>
+  <script src="js/app/model/event.js?v=1"></script>
   <script src="js/app/service/geoservice.js?v=1"></script>
   <script src="js/app/service/searchservice.js?v=1"></script>
+  <script src="js/app/service/eventservice.js?v=1"></script>
   <script src="js/app/ui/errorhandler.js?v=1"></script>
   <script src="js/app/ui/eventshandler.js?v=1"></script>
 
