Google geocode and reverse geocode now working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
     		location.lng = "0.5";
     		location.name = $("#locationTextbox").val();
 		
-        eventington.searchservice.searchEvents(eventington.ui.showError, eventington.ui.showEvents, startDate);
+        eventington.searchservice.searchEvents(eventington.ui.showError, eventington.ui.showEvents, location, startDate, startDate);
       };
     </script>
 
